2002-04-22  Jeff Hobbs  <jeffh@ActiveState.com>

	* configure: regen'ed
	* configure.in (CLEANFILES): added pkgIndex.tcl

	* README.cygwin: improved notes on using cygwin.

2002-04-03  Jeff Hobbs  <jeffh@ActiveState.com>

	* Makefile.in: improved use of DESTDIR in install targets.
	Removed need for installdirs target.
	Broke TCLSH_PROG into TCLSH_ENV and TCLSH_PROG with TCLSH var and
	added comments about TCLSH_ENV.
	Added default shell and gdb targets.
	Added comments about using RUNTIME_SOURCES var.

	* README.cygwin: updated notes about using mingw gcc as a compiler.

	* configure: 
	* configure.in: updated to new TEA base that: prefixes all macros
	with TEA_* instead of SC_*; adds TEA_PREFIX, which defaults the
	prefix and exec_prefix values to what Tcl used; adds
	TEA_SETUP_COMPILER, which handles basic compiler / support program
	checks and simplifies the configure.in.

2002-04-01  Jeff Hobbs  <jeffh@ActiveState.com>

	* Makefile.in (install-lib-binaries): ensure that binary files are
	installed with executable bit set (use INSTALL_PROGRAM)

2002-03-29  Jeff Hobbs  <jeffh@ActiveState.com>

	* configure: regen'ed from changed tclconfig/tcl.m4

	* generic/tclsample.c: added #include <string.h> for strlen /
	strcmp declarations.

2002-03-28  Jeff Hobbs  <jeffh@ActiveState.com>

	* Makefile.in: moved setting TCLLIBPATH to the test target because
	that is where it is needed, added a little doc about it.

	* configure:
	* configure.in: BUILD_${PACKAGE} had to be static BUILD_sample in
	AC_DEFINE because autoconf wasn't substituting ${PACKAGE}.

	* tests/all.tcl: added message about starting pwd

2002-03-27  Jeff Hobbs  <jeffh@ActiveState.com>

	* Makefile.in (TCLSH_PROG): moved and updated env var definitions
	to have tclsh work from build dir.  Removed TCL_EXTRA_CFLAGS,
	TCL_LD_FLAGS, TCL_SHLIB_LD_LIBS, TCL_DBGX, TCL_STUB_LIB_FILE,
	TCL_STUB_LIB_SPEC as they aren't needed (configure acquires all
	that info for us).  TCL_LIBS is also not needed, but left in as a